themes/components/message.less
@message-prefix: ~"@{prefix}message";
@notify-prefix: ~"@{prefix}notify";
@icon-prefix: ~"@{prefix}icon";

.@{message-prefix}{
    z-index: @zindex-message;
    .@{notify-prefix}{
        &-content{
            padding: 8px 18px;
            [class^="h-icon"], [class*=" h-icon"]{
                margin-right: 10px;
                display: inline-block;
            }
        }
    }
    &.@{notify-prefix}-has-close{
        .@{notify-prefix}-content{
            padding-right: 40px;
        }
    }

    &.@{notify-prefix} {
        &-show {
            .@{notify-prefix}-container {
                top: 40px;
            }
        }
    }
}

